--- a/src/main/resources/templates/error/500.html
+++ b/src/main/resources/templates/error/500.html
@@ -2,11 +2,9 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>5xx</title>
+    <title>500</title>
 </head>
 <body>
-    <h1>code:[[${code}]]</h1>
-    <br>
-    <h1>msg:[[${msg}]]</h1>
+    <h1>500 Page</h1>
 </body>
 </html>
