--- a/src/main/resources/templates/admin/data/rule/ruleList.html
+++ b/src/main/resources/templates/admin/data/rule/ruleList.html
@@ -23,7 +23,7 @@
 
 <!-- 操作 -->
 <script type="text/html" id="ruleListBar">
-    <a class="layui-btn layui-btn-xs" lay-event="edit"><i class="fa fa-edit"></i>修改</a>
+    <a class="layui-btn layui-btn-xs" lay-event="edit"><i class="fa fa-edit"></i> 修改</a>
 </script>
 </body>
 </html>
@@ -32,7 +32,7 @@
         [
             {field: 'ruleId', checkbox: true, fixed: 'left', width: 50}
             , {field: 'ruleName', title: '规则名称', align: 'center', width: 140}
-            , {field: 'cityCnName', title: '城市', align: 'center', width: 120}
+            , {field: 'websiteName', title: '来源网站', align: 'center', width: 120}
             , {field: 'allowedDomains', title: '爬取的域名', align: 'center', width: 160}
             , {field: 'loopStart', title: '详情页循环入口', align: 'center', width: 160}
             , {field: 'nextUrl', title: '下一页', align: 'center', width: 160}
