--- a/src/main/resources/templates/admin/data/schedule/scheduleAdd.html
+++ b/src/main/resources/templates/admin/data/schedule/scheduleAdd.html
@@ -31,18 +31,18 @@
         </div>
     </div>
 
-    <div class="layui-form-item layui-row layui-col-xs8">
-        <label class="layui-form-label">备注</label>
-        <div class="layui-input-block">
-            <input type="text" class="layui-input" name="remark" lay-verify="required" placeholder="备注">
-        </div>
-    </div>
-
     <div class="layui-form-item">
         <label class="layui-form-label">状态</label>
         <div class="layui-input-block">
             <input type="radio" name="status" value="0" title="正常" checked="">
             <input type="radio" name="status" value="1" title="暂停">
+        </div>
+    </div>
+
+    <div class="layui-form-item layui-row layui-col-xs8">
+        <label class="layui-form-label">备注</label>
+        <div class="layui-input-block">
+            <textarea class="layui-textarea" name="remark" placeholder="备注"></textarea>
         </div>
     </div>
 
