--- a/src/main/resources/templates/admin/data/rule/ruleAdd.html
+++ b/src/main/resources/templates/admin/data/rule/ruleAdd.html
@@ -4,10 +4,18 @@
 <body class="childrenBody">
 <form class="layui-form" style="width:80%;">
 
-    <div class="layui-form-item layui-row layui-col-xs8">
-        <label class="layui-form-label">规则名称</label>
-        <div class="layui-input-block">
-            <input type="text" class="layui-input" name="ruleName" lay-verify="required" placeholder="规则名称">
+    <div class="layui-row">
+        <div class="magb15 layui-col-md6">
+            <label class="layui-form-label">规则名称</label>
+            <div class="layui-input-block">
+                <input type="text" class="layui-input" name="ruleName" th:value="*{ruleName}" lay-verify="required" placeholder="规则名称">
+            </div>
+        </div>
+        <div class="magb15 layui-col-md6">
+            <label class="layui-form-label">来源网站</label>
+            <div class="layui-input-block">
+                <input type="text" class="layui-input" name="websiteName" th:value="*{websiteName}" lay-verify="required" placeholder="规则名称">
+            </div>
         </div>
     </div>
 
@@ -106,16 +114,6 @@
         <label class="layui-form-label">出租方式</label>
         <div class="layui-input-block">
             <input type="text" name="rentWay" autocomplete="off" placeholder="出租方式" class="layui-input">
-        </div>
-    </div>
-
-    <div class="layui-form-item">
-        <label class="layui-form-label">城市</label>
-        <div class="layui-input-block">
-            <select name="cityId" lay-verify="required">
-                <option value=""></option>
-                <option th:each="item : ${city}" th:value="${item.id}" th:if="${city != null}">[[${item.cnName}]]</option>
-            </select>
         </div>
     </div>
 
